@@ -810,6 +810,7 @@ MPEG-2.5A L2;MPEG-2.5 Audio Layer 2;MediaInfo;A;MPEG-A;;;
 MPEG-2.5A L3;MPEG-2.5 Audio Layer 3;MediaInfo;A;MPEG-A;;;
 APE;Monkey's Audio;MediaInfo;A;;;;http://www.monkeysaudio.com/
 ALS;ALS;MediaInfo;A;;;MPEG-4 Audio Lossless Coding;http://www.nue.tu-berlin.de/forschung/projekte/lossless/mp4als.html#downloads
+Vodei;Vodei MP;MediaInfo;V;;;Video On Demand Exploration Interface;http://www.vodei.com
 0;Unknown;2CC;A;;;;
 1;PCM;2CC;A;PCM;;Microsoft PCM;http://www.microsoft.com/windows/
 2;ADPCM;2CC;A;ADPCM;;Microsoft ADPCM;http://www.microsoft.com/windows/
@@ -893,7 +894,7 @@ C;MPEG2 5.1;2CC;A;;;MPEG2 5.1;
 81;TQ60;2CC;A;;;Voxware TQ60;http://www.voxware.com/
 82;MSRT24;2CC;A;;;Microsoft MSRT24;
 83;G729A;2CC;A;;;AT&T G729A;
-84;MVI_MVI2;2CC;A;;;Motion Pixels MVI_MVI2;
+84;MVI_MVI2;2CC;A;;;Motion Pixels MVI_MVI2
 85;G726;2CC;A;;;DataFusion Systems (Pty) G726
 86;GSM6.10;2CC;A;;;DataFusion Systems (Pty) GSM6.10
 88;ISI AUDIO;2CC;A;;;Iterated Systems AUDIO
@@ -910,21 +911,21 @@ C;MPEG2 5.1;2CC;A;;;MPEG2 5.1;
 99;Packed;2CC;A;;;Studer Professional Audio AG Packed
 A0;PHONYTALK;2CC;A;;;Malden Electronics PHONYTALK
 A1;GSM;;;;;Racal Recorders
-A2;G.720a;;;;;Racal Recorders;
-A3;G.723.1;;;;;Racal Recorders;
-A4;ACELP;;;;;Racal Recorders;
-B0;AAC;;;AAC;;NEC Corporation;
-FF;AAC;2CC;A;AAC;;;
-100;ADPCM;2CC;A;ADPCM;;Rhetorex ADPCM;
-101;IRAT;2CC;A;;;BeCubed IRAT;
-102;;2CC;A;;;IBM A-law;
-103;;2CC;A;;;IBM AVC ADPCM;
-111;G723;2CC;A;;;Vivo G723;
-112;SIREN;2CC;A;;;Vivo SIREN;
-120;CELP;;;;;Philips Speech Processing;
-121;Grundig;;;;;Philips Speech Processing;
-123;G723;2CC;A;;;Digital Equipment Corporation (DEC) G723;
-125;ADPCM;2CC;A;ADPCM;;Sanyo ADPCM;
+A2;G.720a;;;;;Racal Recorders
+A3;G.723.1;;;;;Racal Recorders
+A4;ACELP;;;;;Racal Recorders
+B0;AAC;;;AAC;;NEC Corporation
+FF;AAC;2CC;A;AAC;;
+100;ADPCM;2CC;A;ADPCM;;Rhetorex ADPCM
+101;IRAT;2CC;A;;;BeCubed IRAT
+102;;2CC;A;;;IBM A-law
+103;;2CC;A;;;IBM AVC ADPCM
+111;G723;2CC;A;;;Vivo G723
+112;SIREN;2CC;A;;;Vivo SIREN
+120;CELP;;;;;Philips Speech Processing
+121;Grundig;;;;;Philips Speech Processing
+123;G723;2CC;A;;;Digital Equipment Corporation (DEC) G723
+125;ADPCM;2CC;A;ADPCM;;Sanyo ADPCM
 130;ACEPL;2CC;A;;;Sipro ACEPL.net;http://dividix.host.sk
 131;ACELP4800;2CC;A;;;Sipro ACELP4800;
 132;ACELP8V3;2CC;A;;;Sipro ACELP8V3;
@@ -942,21 +943,21 @@ FF;AAC;2CC;A;AAC;;;
 161;WMA2;2CC;A;;;Windows Media Audio 2;http://www.microsoft.com/windows/windowsmedia/format/codecdownload.aspx
 162;WMA3;2CC;A;;;Windows Media Audio 3;http://www.microsoft.com/windows/windowsmedia/format/codecdownload.aspx
 163;WMA Lossless;2CC;A;;;Windows Media Audio 3;http://www.microsoft.com/windows/windowsmedia/format/codecdownload.aspx
-163;WMA Pro;;;;;WMA Pro over S/PDIF
-170;ADPCM;2CC;A;ADPCM;;Unisys Nap ADPCM
-171;U-Law;2CC;A;;;Unisys Nap U-law
-172;A-Law;2CC;A;;;Unisys Nap A-law
-173;16K;2CC;A;;;Unisys Nap 16K
-174;G.700;;;;;SyCom Technologies
-175;G.726L;;;;;SyCom Technologies
-176;CELP54;;;;;SyCom Technologies
-177;CELP68;;;;;SyCom Technologies
-178;ADPCM;;;ADPCM;;Knowledge Adventure, Inc.
-180;AAC;;;;;Fraunhofer IIS
-190;DTS;;;;;
-200;ADPCM;2CC;A;;;Creative Labs ADPCM
-202;FastSpeech8;2CC;A;;;Creative Labs Fast Speech 8
-203;FastSpeech10;2CC;A;;;Creative Labs Fast Speech 10
+163;WMA Pro;;;;;WMA Pro over S/PDIF;
+170;ADPCM;2CC;A;ADPCM;;Unisys Nap ADPCM;
+171;U-Law;2CC;A;;;Unisys Nap U-law;
+172;A-Law;2CC;A;;;Unisys Nap A-law;
+173;16K;2CC;A;;;Unisys Nap 16K;
+174;G.700;;;;;SyCom Technologies;
+175;G.726L;;;;;SyCom Technologies;
+176;CELP54;;;;;SyCom Technologies;
+177;CELP68;;;;;SyCom Technologies;
+178;ADPCM;;;ADPCM;;Knowledge Adventure, Inc.;
+180;AAC;;;;;Fraunhofer IIS;
+190;DTS;;;;;;
+200;ADPCM;2CC;A;;;Creative Labs ADPCM;
+202;FastSpeech8;2CC;A;;;Creative Labs Fast Speech 8;
+203;FastSpeech10;2CC;A;;;Creative Labs Fast Speech 10;
 210;ADPCM;2CC;A;ADPCM;;UHER informatic GmbH ADPCM
 215;;2CC;A;;;Ulead DV ACM
 216;;2CC;A;;;Ulead DV ACM
@@ -973,7 +974,7 @@ FF;AAC;2CC;A;AAC;;;
 273;SPC;;;;;Sony
 280;Telum;;;;;
 281;TelumIA;;;;;
-285;ADPCM;;;ADPCM;;Norcom Voice Systems
+285;ADPCM;;;ADPCM;;Norcom Voice Systems;
 300;FM_TOWNS_SND;2CC;A;;;Fujitsu FM_TOWNS_SND;
 350;Dev;;;;;Micronas Semiconductors, Inc.;
 351;CELP833;;;;;Micronas Semiconductors, Inc.;
@@ -1005,7 +1006,7 @@ AAC;AAC;;;AAC;;;
 181E;AX24000P;2CC;A;;;Lucent elemedia AX24000P Music codec;
 1971;SonicFoundry;;;;;Lossless;
 1C03;G.723;2CC;A;;;Lucent SX5363S G.723 compliant codec;
-1C07;SX8300P;2CC;A;;;Lucent SX8300P speech codec;
+1C07;SX8300P;2CC;A;;;Lucent SX8300P speech codec
 1C0C;SX5363S;;;G723;;Lucent SX5363S G.723 compliant codec
 1F03;DigiTalk;2CC;A;;;CUseeMe DigiTalk (ex-Rocwell)
 1FC4;ALF2CD;2CC;A;;;NCT Soft ALF2CD ACM
@@ -1021,7 +1022,7 @@ AAC;AAC;;;AAC;;;
 4143;AAC;2CC;A;AAC;;Divio MPEG-4 AAC audio
 4201;Nokia;;;;;
 4243;G726;;;G726;;
-43AC;Lead Speech;2CC;A;;;
+43AC;Lead Speech;2CC;A;;;;
 564C;Lead Vorbis;2CC;A;;;;
 5756;WavPack;;;;;;http://www.wavpack.com/
 674F;Vorbis1;2CC;A;Vorbis;;Vorbis Mode 1;http://www.vorbis.com
